--- a/dy.html
+++ b/dy.html
@@ -37,7 +37,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </head>
 <body class="movie">
 <div class="header">
-  <div class="logo"><a href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
+  <div class="logo"><a href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
     <div class="menu">
     <ul>
       <li ><a href="/" title="传说--跨界资源融合.引领行业公正">网站首页</a></li>
@@ -53,9 +53,9 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </div>
 <div class="movie_content">
   <ul class="list">
-		  <li><a title="黑豹2 HD中字 (最新)" href="" target="_blank"><div class="bg-cover"></div><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/4dfc6d50-a942-4228-a7c0-b361b9159cf5.jpg" alt="黑豹2 HD中字 (最新)"></a></li>
-	  	  <li><a title="咒 HD (最新) " href="" target="_blank"><div class="bg-cover"></div><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/e362c57a-7cdc-453b-9309-103b6097400d.jpg" alt="咒 HD (最新) "></a></li>
-	  	  <li><a title="她和她的她" href="" target="_blank"><div class="bg-cover"></div><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/761e3299-b5c3-49e1-8544-a1f595cc9e54.jpg" alt="她和她的她"></a></li>
+		  <li><a title="黑豹2 HD中字 (最新)" href="" target="_blank"><div class="bg-cover"></div><img src="https://img12.360buyimg.com/ddimg/jfs/t1/160941/5/35245/38843/63ebf108Fbf992d51/63774a593aa8a1cc.jpg" alt="黑豹2 HD中字 (最新)"></a></li>
+	  	  <li><a title="咒 HD (最新) " href="" target="_blank"><div class="bg-cover"></div><img src="https://img12.360buyimg.com/ddimg/jfs/t1/185303/35/32444/20147/63ebf122Fb10cbfea/eb0eade9f31147ff.jpg" alt="咒 HD (最新) "></a></li>
+	  	  <li><a title="她和她的她" href="" target="_blank"><div class="bg-cover"></div><img src="https://img12.360buyimg.com/ddimg/jfs/t1/117059/4/33633/43507/63ebf166F90df5d43/3a5af2d70e18710e.jpg" alt="她和她的她"></a></li>
 	  	</ul>
 </div>
 <div class="footer">
