--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 <body>
 	<div class="newindex">
   <div class="topcloud"></div>
-  <div class="newlogo" data-scroll-reveal="enter top over 1s and move 100px"><a href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" width="81" alt="传说--跨界资源融合.引领行业公正"></a></div>
+  <div class="newlogo" data-scroll-reveal="enter top over 1s and move 100px"><a href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" width="81" alt="传说--跨界资源融合.引领行业公正"></a></div>
 	<div class="indexmenu">
 		<a href="/pt.html" class="alink a1" title="信誉平台"><span>信誉平台</span></a>
 		<a href="/xnb.html" class="alink a2" title="虚拟币使用"><span>虚拟币使用</span></a>
