--- a/lx.html
+++ b/lx.html
@@ -38,7 +38,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </head>
 <body class="contactus">
 <div class="header">
-  <div class="logo"><a href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
+  <div class="logo"><a href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
     <div class="menu">
     <ul>
       <li ><a href="/" title="传说--跨界资源融合.引领行业公正">网站首页</a></li>
@@ -67,7 +67,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </div>
 <style>
 .tg-qq .item{width:448px;height:113px;display:flex;align-items:center;padding-left:120px;font-size:24px;font-weight:700;}
-.tg-qq .wx{background:url(https://img03.mifile.cn/v1/MI_542ED8B1722DC/b3a17ab6342b67b72127f821a2a2643c.png) no-repeat;margin-top:50px;}
+.tg-qq .wx{background:url(https://img12.360buyimg.com/ddimg/jfs/t1/132882/5/28856/2750/63ebf2ecF891a07ba/7f966852aa684ad9.png) no-repeat;margin-top:50px;}
 .tg-qq .item a{color:#fff;display:block;width:100%;height:100%;line-height:113px;}
 .tg-qq .item a:hover{color:#ff0;}
     .contact_ico{position:fixed;right:10px;top:50%;height:160px;margin-top:-80px;width:80px;z-index:999;}
