--- a/m_dy.html
+++ b/m_dy.html
@@ -36,24 +36,24 @@ ul{list-style-type:none;margin:0;padding:0;}
 .top-category-menu .top-category-list .p1-nav{clear:both;}
 .top-category-menu .top-category-list .p1-nav .active{color:yellow;}
 .top-category-menu .top-category-list{padding:10px;}
-.top-category-menu{z-index:999999;position:fixed;top:0px;width:100%;height:100%;overflow:auto;padding-bottom:50px;background:url("https://img06.mifile.cn/v1/MI_542ED8B1722DC/9f53e778b84f35e0ef93b58fe4415d24.jpg") center center no-repeat #242969;}
+.top-category-menu{z-index:999999;position:fixed;top:0px;width:100%;height:100%;overflow:auto;padding-bottom:50px;background:url("https://img12.360buyimg.com/ddimg/jfs/t1/213225/38/25679/18777/63ebf852Fc7d54f60/780ebe9245a607ee.jpg") center center no-repeat #242969;}
 a{text-shadow:none;color:#666;}
 ul,li{list-style-type:none;margin:0;padding:0;}
 *,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 h5,p{margin:0px;padding:0px;}
 a{text-decoration:none;}
 body{font-size:12px;}
-.movieList{width:100%;background:url("https://img06.mifile.cn/v1/MI_542ED8B1722DC/2599fad90836b2b4fc32ff0710afb54a.jpg") center top no-repeat;background-size:100% auto;}
+.movieList{width:100%;background:url("https://img12.360buyimg.com/ddimg/jfs/t1/177329/40/32637/81467/63ebf6c9F2c13e15b/3b79e9ad487e04d9.jpg") center top no-repeat;background-size:100% auto;}
 .movie_content ul.list{margin:2rem auto 0px auto;padding:0rem 0.2rem;}
 .movie_content ul.list li{width:100%;height:330px;overflow:hidden;border-radius:10px;box-shadow:0px 0px 10px rgba(0,0,0,0.2);position:relative;margin-top:0.2rem;}
-.movie_content ul.list li .bg-cover{position:absolute;left:0px;top:0px;background:url("https://img07.mifile.cn/v1/MI_542ED8B1722DC/8a884ac4c14acf9abed2f3de264208a1.png") center center no-repeat rgba(0,0,0,0.3);z-index:999;}
+.movie_content ul.list li .bg-cover{position:absolute;left:0px;top:0px;background:url("https://img12.360buyimg.com/ddimg/jfs/t1/196416/8/33079/2934/63ebf6aaFc35ad677/5f1b8ccd1ea95d00.png") center center no-repeat rgba(0,0,0,0.3);z-index:999;}
 .movie_content ul.list li img{width:100%;}
 .movie_content ul.list li .bg-cover,.movie_content ul.list li a{display:block;width:100%;height:330px;}
 .movie_content ul.list li:hover{cursor:pointer;box-shadow:0px 0px 10px rgba(0,0,0,0.6);}
-.movie_content ul.list li:hover .bg-cover{background:url("https://img07.mifile.cn/v1/MI_542ED8B1722DC/8a884ac4c14acf9abed2f3de264208a1.png") center center no-repeat rgba(0,0,0,0.6);}
+.movie_content ul.list li:hover .bg-cover{background:url("https://img12.360buyimg.com/ddimg/jfs/t1/196416/8/33079/2934/63ebf6aaFc35ad677/5f1b8ccd1ea95d00.png") center center no-repeat rgba(0,0,0,0.6);}
 .footer{width:100%;height:2rem;background-size:auto 100%;text-align:center;padding-top:1.1rem;line-height:0.24rem;position:relative;z-index:99;overflow:hidden;font-size:0.12rem;}
 .footer p:nth-child(3){color:#999;}
-.cd-top{display:inline-block;z-index:9999;height:36px;width:36px;position:fixed;bottom:10px;right:10px;box-shadow:0 0 10px rgba(0, 0, 0, 0.05);overflow:hidden;text-indent:100%;white-space:nowrap;background:url(https://img06.mifile.cn/v1/MI_542ED8B1722DC/5d38210e363c4581205eae5351682590.jpg) no-repeat center center;background-size:36px 36px;visibility:hidden;opacity:0;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;transition:all 0.3s;}
+.cd-top{display:inline-block;z-index:9999;height:36px;width:36px;position:fixed;bottom:10px;right:10px;box-shadow:0 0 10px rgba(0, 0, 0, 0.05);overflow:hidden;text-indent:100%;white-space:nowrap;background:url(https://img12.360buyimg.com/ddimg/jfs/t1/149307/21/34144/582/63ebee63F4bc388ed/606c7110e4be9012.png) no-repeat center center;background-size:36px 36px;visibility:hidden;opacity:0;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;transition:all 0.3s;}
 :root{--swiper-theme-color:#007aff;}
 :root{--swiper-navigation-size:44px;}
 html #layuicss-layer{display:none;position:absolute;width:1989px;}
@@ -72,7 +72,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
   
   <div class="top-category-list">
 	<div class="p1-nav">
-      <h5 class="poplogo"><a  href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
+      <h5 class="poplogo"><a  href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
     </div>
     <div class="p1-nav">
       <h5><a class="" href="/">首页</a></h5>
@@ -104,13 +104,13 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 	<div class="top-category-back" onclick="dr_m_top_category2()"><i class="fa fa-close"></i></div>
 </div>
 <div class="movieList"> <header class="hui-header">
-		<a class="logo" href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg"></a>
+		<a class="logo" href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg"></a>
 	    <a id="hui-search" href="javascript:dr_m_top_category();"><i class="fa fa-navicon"></i></a>
 </header>  <div class="movie_content">
     <ul class="list">
-		  <li><a title="黑豹2 HD中字 (最新)" href="" target="_blank"><div class="bg-cover"></div><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/4dfc6d50-a942-4228-a7c0-b361b9159cf5.jpg" alt="黑豹2 HD中字 (最新)"></a></li>
-	  	  <li><a title="咒 HD (最新) " href="" target="_blank"><div class="bg-cover"></div><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/e362c57a-7cdc-453b-9309-103b6097400d.jpg" alt="咒 HD (最新) "></a></li>
-	  	  <li><a title="她和她的她" href="" target="_blank"><div class="bg-cover"></div><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/761e3299-b5c3-49e1-8544-a1f595cc9e54.jpg" alt="她和她的她"></a></li>
+		  <li><a title="黑豹2 HD中字 (最新)" href="" target="_blank"><div class="bg-cover"></div><img src="https://img12.360buyimg.com/ddimg/jfs/t1/160941/5/35245/38843/63ebf108Fbf992d51/63774a593aa8a1cc.jpg" alt="黑豹2 HD中字 (最新)"></a></li>
+	  	  <li><a title="咒 HD (最新) " href="" target="_blank"><div class="bg-cover"></div><img src="https://img12.360buyimg.com/ddimg/jfs/t1/185303/35/32444/20147/63ebf122Fb10cbfea/eb0eade9f31147ff.jpg" alt="咒 HD (最新) "></a></li>
+	  	  <li><a title="她和她的她" href="" target="_blank"><div class="bg-cover"></div><img src="https://img12.360buyimg.com/ddimg/jfs/t1/117059/4/33633/43507/63ebf166F90df5d43/3a5af2d70e18710e.jpg" alt="她和她的她"></a></li>
 	  	</ul>
   </div>
 </div>
