--- a/m_xnb.html
+++ b/m_xnb.html
@@ -36,14 +36,14 @@ ul{list-style-type:none;margin:0;padding:0;}
 .top-category-menu .top-category-list .p1-nav{clear:both;}
 .top-category-menu .top-category-list .p1-nav .active{color:yellow;}
 .top-category-menu .top-category-list{padding:10px;}
-.top-category-menu{z-index:999999;position:fixed;top:0px;width:100%;height:100%;overflow:auto;padding-bottom:50px;background:url("https://img06.mifile.cn/v1/MI_542ED8B1722DC/9f53e778b84f35e0ef93b58fe4415d24.jpg") center center no-repeat #242969;}
+.top-category-menu{z-index:999999;position:fixed;top:0px;width:100%;height:100%;overflow:auto;padding-bottom:50px;background:url("https://img12.360buyimg.com/ddimg/jfs/t1/213225/38/25679/18777/63ebf852Fc7d54f60/780ebe9245a607ee.jpg") center center no-repeat #242969;}
 a{text-shadow:none;color:#666;}
 ul,li{list-style-type:none;margin:0;padding:0;}
 *,*:before,*:after{-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 h2,h5,p{margin:0px;padding:0px;}
 a{text-decoration:none;}
 body{font-size:12px;}
-.money{width:100%;background:url("https://img03.mifile.cn/v1/MI_542ED8B1722DC/816b2a55741c6d6497fe467062e0bc03.jpg") center 0px no-repeat;background-size:100% auto;overflow:hidden;}
+.money{width:100%;background:url("https://img12.360buyimg.com/ddimg/jfs/t1/121484/9/35137/55845/63ebf5e8F21b13c22/1e22e4e87439ca49.jpg") center 0px no-repeat;background-size:100% auto;overflow:hidden;}
 .money_content{width:100%;min-height:500px;}
 .money_tab{width:100%;margin:1.5rem auto 0px auto;}
 .money_tab .bd{margin-top:0.2rem;overflow:hidden;padding:0 0.2rem;}
@@ -56,7 +56,7 @@ body{font-size:12px;}
 .money_tab .bd .con ul li .jump a{display:block;width:100%;height:0.28rem;line-height:0.28rem;background:#0f2f6a;text-align:center;color:#fff;font-size:12px;border-radius:0.14rem;}
 .footer{width:100%;height:2rem;background-size:auto 100%;text-align:center;padding-top:1.1rem;line-height:0.24rem;position:relative;z-index:99;overflow:hidden;font-size:0.12rem;}
 .footer p:nth-child(3){color:#999;}
-.cd-top{display:inline-block;z-index:9999;height:36px;width:36px;position:fixed;bottom:10px;right:10px;box-shadow:0 0 10px rgba(0, 0, 0, 0.05);overflow:hidden;text-indent:100%;white-space:nowrap;background:url(https://img06.mifile.cn/v1/MI_542ED8B1722DC/5d38210e363c4581205eae5351682590.jpg) no-repeat center center;background-size:36px 36px;visibility:hidden;opacity:0;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;transition:all 0.3s;}
+.cd-top{display:inline-block;z-index:9999;height:36px;width:36px;position:fixed;bottom:10px;right:10px;box-shadow:0 0 10px rgba(0, 0, 0, 0.05);overflow:hidden;text-indent:100%;white-space:nowrap;background:url(https://img12.360buyimg.com/ddimg/jfs/t1/149307/21/34144/582/63ebee63F4bc388ed/606c7110e4be9012.png) no-repeat center center;background-size:36px 36px;visibility:hidden;opacity:0;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;transition:all 0.3s;}
 :root{--swiper-theme-color:#007aff;}
 :root{--swiper-navigation-size:44px;}
 html #layuicss-layer{display:none;position:absolute;width:1989px;}
@@ -75,7 +75,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
   
   <div class="top-category-list">
 	<div class="p1-nav">
-      <h5 class="poplogo"><a  href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
+      <h5 class="poplogo"><a  href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
     </div>
     <div class="p1-nav">
       <h5><a class="" href="/">首页</a></h5>
@@ -107,7 +107,7 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
 	<div class="top-category-back" onclick="dr_m_top_category2()"><i class="fa fa-close"></i></div>
 </div>
 <div class="money"> <header class="hui-header">
-		<a class="logo" href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg"></a>
+		<a class="logo" href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg"></a>
 	    <a id="hui-search" href="javascript:dr_m_top_category();"><i class="fa fa-navicon"></i></a>
 </header>  <div class="money_content">
     <div class="money_tab">
@@ -138,8 +138,8 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
                     <li><a href="/uploadfile/202301/9c536b84a9a171f.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/137872/30/29250/9439/63146660E4e3ffd4e/9579292086168eb1.png"></a><div class="jump"><a href="/uploadfile/202301/9c536b84a9a171f.pdf" target="_blank">币安交易所教程</a></div></li>
                     <li><a href="/uploadfile/202301/2d514452d6fbe01.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/210970/26/26054/4354/6314668dE5c8472e9/fb5007e8c83ac5a0.png"></a><div class="jump"><a href="/uploadfile/202301/2d514452d6fbe01.pdf" target="_blank">PEXPAY交易所教程</a></div></li>
                     <li><a href="/uploadfile/202301/1423cf3ec8743b.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/192871/22/27768/11581/63146682E151636e6/c62840c1a30b47c2.png"></a><div class="jump"><a href="/uploadfile/202301/1423cf3ec8743b.pdf" target="_blank">Bitop交易所教程</a></div></li>
-                    <li><a href="https://www.huobi.com/" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/d94e5e15-4722-484c-b7e5-5b53e317ef0f.png"></a><div class="jump"><a href="https://www.huobi.com/" target="_blank">火币交易所教程</a></div></li>
-                    <li><a href="https://m.mexc.com" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/17fdfe6a-174c-4b94-9687-dc42d8c6fd43.png"></a><div class="jump"><a href="https://m.mexc.com" target="_blank">抹茶交易所教程</a></div></li>
+                    <li><a href="https://www.huobi.com/" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/46203/8/23317/14366/63ebef67F05842571/ca6eac51541f5dfa.png"></a><div class="jump"><a href="https://www.huobi.com/" target="_blank">火币交易所教程</a></div></li>
+                    <li><a href="https://m.mexc.com" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/107668/27/36334/9546/63ebef45F47936cf7/e1792529d822c5c1.png"></a><div class="jump"><a href="https://m.mexc.com" target="_blank">抹茶交易所教程</a></div></li>
                     
                     </ul>
         </div>
@@ -147,8 +147,8 @@ html #layuicss-layer{display:none;position:absolute;width:1989px;}
         <!-- con -->
         <div class="con">
           <ul>
-                     <li><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/fb48c888-c315-4b8c-b678-b4911dacf5f2.png"></a><div class="jump"><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank">trezor钱包教程</a></div></li>
-                    <li><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/a353e732-e8f1-4fbf-985b-caaac12a9b2c.png"></a><div class="jump"><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank">ledger钱包教程</a></div></li>
+                     <li><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/134668/17/30938/3689/63ebef20F50f74220/b19767411dcf04ad.png"></a><div class="jump"><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank">trezor钱包教程</a></div></li>
+                    <li><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/55922/9/22336/10294/63ebef03F3775cfd2/0ecc174e057cfda2.png"></a><div class="jump"><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank">ledger钱包教程</a></div></li>
                     
                     </ul>
         </div>
