--- a/pt.html
+++ b/pt.html
@@ -36,7 +36,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </head>
 <body class="platform">
 <div class="header">
-  <div class="logo"><a href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
+  <div class="logo"><a href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
     <div class="menu">
     <ul>
       <li ><a href="/" title="传说--跨界资源融合.引领行业公正">网站首页</a></li>
@@ -53,7 +53,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 <div class="pf_content">
   <ul class="list">
    <li>
-		  <div class="photo"><a title="欧陆娱乐" href="javascript:;"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/a482dcf7125b191b9ba59ca7f03bc507.png" alt="欧陆娱乐"></a></div>
+		  <div class="photo"><a title="欧陆娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/59715/33/23943/9093/63ebece0F1cb235d0/c634b6d641212ba9.png" alt="欧陆娱乐"></a></div>
 		  <p>奖金：1980，赔率：9.9</p>
 		  		  <dl>
 		  	  <dd><a href="https://t.olu333.com/Register/aan51eCQNL" target="_blank">注册地址</a></dd>
@@ -63,7 +63,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
         </dl>
 	  </li>
 		  <li>
-		  <div class="photo"><a title="蓝狮在线" href="javascript:;"><img src="https://img03.mifile.cn/v1/MI_542ED8B1722DC/06960c1de42e0ee8137a5c4ce27f90b7.png" alt="蓝狮在线"></a></div>
+		  <div class="photo"><a title="蓝狮在线" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/182349/3/30220/10471/63ebeda9F537cbce5/27117a14f34730af.png" alt="蓝狮在线"></a></div>
 		  <p>奖金：1990，赔率：9.95</p>
 		  		  <dl>
 		  	  <dd><a href="https://t.lanshi666.com/Register/AkuTvrOlAC" target="_blank">注册地址</a></dd>
@@ -73,7 +73,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
         </dl>
 	  </li>
 	  		 <li>
-		  <div class="photo"><a title="富联娱乐" href="javascript:;"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/7e553638eccc6d251fcde485847ef05d.png" alt="富联娱乐"></a></div>
+		  <div class="photo"><a title="富联娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/102721/30/34928/11510/63ebed04F9ad848f0/8fbce1937ccdc232.png" alt="富联娱乐"></a></div>
 		  <p>奖金：1980，赔率：9.9</p>
 		  		  <dl>
 		  	  <dd><a href="https://t.flyl55.net/Register/m90aeTlqOP" target="_blank">注册地址</a></dd>
@@ -83,7 +83,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
         </dl>
 	  </li>
 	  	  <li>
-		  <div class="photo"><a title="顺盈娱乐" href="javascript:;"><img src="https://img07.mifile.cn/v1/MI_542ED8B1722DC/47b38d9920d5eac1e8d439fdd8b46d8f.png" alt="顺盈娱乐"></a></div>
+		  <div class="photo"><a title="顺盈娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/122944/14/30250/17358/63ebecc5Fa684bf91/2a1428f3596b5a8f.png" alt="顺盈娱乐"></a></div>
 		  <p>奖金：1990，赔率：9.95</p>
 		  		  <dl>
 		  	  <dd><a href="https://s.syss11.net/Register/2TOqYwWUXP" target="_blank">注册地址</a></dd>
@@ -93,7 +93,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
         </dl>
 	  </li>
 	  <li>
-		  <div class="photo"><a title="欧皇娱乐" href="javascript:;"><img src="https://img03.mifile.cn/v1/MI_542ED8B1722DC/3b70696932d3035a2c87ba82d77a66fd.png" alt="欧皇娱乐"></a></div>
+		  <div class="photo"><a title="欧皇娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/5608/25/18733/2874/63ebeda9F844280b8/6454e63e04b317de.png" alt="欧皇娱乐"></a></div>
 		  <p>奖金：1980，赔率：9.9</p>
 		  		  <dl>
 		  	  <dd><a href="https://uszsz.ohvip2.com/register.html" target="_blank">注册地址</a></dd>
@@ -103,7 +103,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
         </dl>
 	  </li>
 	   <li>
-		  <div class="photo"><a title="安信9娱乐" href="javascript:;"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/fbe13b20078ea00e2f715591a5421384.png" alt="安信9娱乐"></a></div>
+		  <div class="photo"><a title="安信9娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/5313/6/18510/35374/63ebed7fF2a799377/61426722fd04e75c.png" alt="安信9娱乐"></a></div>
 		  <p>奖金：2000，赔率：10</p>
 		  		  <dl>
 		  	  <dd><a href="https://a9.ax923.com/link/reg/LZZ1sqtRQZ" target="_blank">注册地址</a></dd>
