--- a/xnb.html
+++ b/xnb.html
@@ -37,7 +37,7 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
 </head>
 <body class="money">
 <div class="header">
-  <div class="logo"><a href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
+  <div class="logo"><a href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" style="width: 100px;border-left-width: 20px;margin-left: 20px;"></a></div>
     <div class="menu">
     <ul>
       <li ><a href="/" title="传说--跨界资源融合.引领行业公正">网站首页</a></li>
@@ -81,8 +81,8 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
                     <li><a href="/uploadfile/202301/9c536b84a9a171f.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/137872/30/29250/9439/63146660E4e3ffd4e/9579292086168eb1.png"></a><div class="jump"><a href="/uploadfile/202301/9c536b84a9a171f.pdf" target="_blank">币安交易所教程</a></div></li>
                     <li><a href="/uploadfile/202301/2d514452d6fbe01.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/210970/26/26054/4354/6314668dE5c8472e9/fb5007e8c83ac5a0.png"></a><div class="jump"><a href="/uploadfile/202301/2d514452d6fbe01.pdf" target="_blank">PEXPAY交易所教程</a></div></li>
                     <li><a href="/uploadfile/202301/1423cf3ec8743b.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/192871/22/27768/11581/63146682E151636e6/c62840c1a30b47c2.png"></a><div class="jump"><a href="/uploadfile/202301/1423cf3ec8743b.pdf" target="_blank">Bitop交易所教程</a></div></li>
-                    <li><a href="https://www.huobi.com/" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/d94e5e15-4722-484c-b7e5-5b53e317ef0f.png"></a><div class="jump"><a href="https://www.huobi.com/" target="_blank">火币交易所教程</a></div></li>
-                    <li><a href="https://m.mexc.com" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/17fdfe6a-174c-4b94-9687-dc42d8c6fd43.png"></a><div class="jump"><a href="https://m.mexc.com" target="_blank">抹茶交易所教程</a></div></li>
+                    <li><a href="https://www.huobi.com/" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/46203/8/23317/14366/63ebef67F05842571/ca6eac51541f5dfa.png"></a><div class="jump"><a href="https://www.huobi.com/" target="_blank">火币交易所教程</a></div></li>
+                    <li><a href="https://m.mexc.com" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/107668/27/36334/9546/63ebef45F47936cf7/e1792529d822c5c1.png"></a><div class="jump"><a href="https://m.mexc.com" target="_blank">抹茶交易所教程</a></div></li>
                     <li><a href="/uploadfile/202301/c264e3f1ea8ff41.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/173938/31/26858/1763/631466adE5a772570/c832c49d8b8fc8ad.png"></a><div class="jump"><a href="/uploadfile/202301/c264e3f1ea8ff41.pdf" target="_blank">苹果id购买教程</a></div></li>
                     <li><a href="/outlook.html" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/106656/28/31238/5139/631466baE0d8a6c05/a0bc04f84a9d269f.png"></a><div class="jump"><a href="/outlook.html" target="_blank">Outlook注册教程</a></div></li>
                     <li><a href="/gmail.html" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/161113/31/29901/12129/631466c6E0f678be1/c46417b6665ff350.png"></a><div class="jump"><a href="/gmail.html" target="_blank">谷歌邮箱注册教程</a></div></li>
@@ -93,8 +93,8 @@ if(window.location.toString().indexOf('pref=padindex') != -1){
       <!-- con -->
       <div class="con">
         <ul>
-                    <li><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/fb48c888-c315-4b8c-b678-b4911dacf5f2.png"></a><div class="jump"><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank">trezor钱包教程</a></div></li>
-                    <li><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank"><img src="https://ldbbs.ldmnq.com/bbs/topic/attachment/2023-1/a353e732-e8f1-4fbf-985b-caaac12a9b2c.png"></a><div class="jump"><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank">ledger钱包教程</a></div></li>
+                    <li><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/134668/17/30938/3689/63ebef20F50f74220/b19767411dcf04ad.png"></a><div class="jump"><a href="/uploadfile/202301/02b706abecb42c9.pdf" target="_blank">trezor钱包教程</a></div></li>
+                    <li><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/55922/9/22336/10294/63ebef03F3775cfd2/0ecc174e057cfda2.png"></a><div class="jump"><a href="/uploadfile/202301/ac2616849275831.pdf" target="_blank">ledger钱包教程</a></div></li>
                     <li><a href="/uploadfile/202301/c264e3f1ea8ff41.pdf" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/173938/31/26858/1763/631466adE5a772570/c832c49d8b8fc8ad.png"></a><div class="jump"><a href="/uploadfile/202301/c264e3f1ea8ff41.pdf" target="_blank">苹果id购买教程</a></div></li>
                     <li><a href="/outlook.html" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/106656/28/31238/5139/631466baE0d8a6c05/a0bc04f84a9d269f.png"></a><div class="jump"><a href="/outlook.html" target="_blank">Outlook注册教程</a></div></li>
                     <li><a href="/gmail.html" target="_blank"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/161113/31/29901/12129/631466c6E0f678be1/c46417b6665ff350.png"></a><div class="jump"><a href="/gmail.html" target="_blank">谷歌邮箱注册教程</a></div></li>
