--- a/m_pt.html
+++ b/m_pt.html
@@ -43,7 +43,7 @@ ul,li,dl{list-style-type:none;margin:0;padding:0;}
 h5,p,dl,dd{margin:0px;padding:0px;}
 a{text-decoration:none;}
 body{font-size:12px;}
-.pingtai{width:100%;background:url("https://img06.mifile.cn/v1/MI_542ED8B1722DC/82039fafc1fb4e10586ebf34c1ac14c4.jpg") center top no-repeat;background-size:100% auto;overflow:hidden;}
+.pingtai{width:100%;background:url("https://img12.360buyimg.com/ddimg/jfs/t1/91643/20/32468/62905/63ebf58cFf033f0cf/460fd7c3ff70ea41.jpg") center top no-repeat;background-size:100% auto;overflow:hidden;}
 .pf_content{width:100%;min-height:400px;}
 .pf_content ul.list{width:100%;margin:1.5rem auto 0px auto;display:flex;justify-content:space-between;flex-wrap:wrap;padding:0 0.1rem;}
 .pf_content ul.list li{width:48%;height:auto;border-radius:20px;box-shadow:0px 0px 10px rgba(0,0,0,0.1);background:rgba(240,255,255,0.2);overflow:hidden;margin-bottom:0.15rem;}
@@ -58,7 +58,7 @@ body{font-size:12px;}
 .pf_content ul.list li dl dd:nth-child(3) a,.pf_content ul.list li dl dd:nth-child(4) a{background:#ec830d;background-size:100% auto;}
 .footer{width:100%;height:2rem;background-size:auto 100%;text-align:center;padding-top:1.1rem;line-height:0.24rem;position:relative;z-index:99;overflow:hidden;font-size:0.12rem;}
 .footer p:nth-child(3){color:#999;}
-.cd-top{display:inline-block;z-index:9999;height:36px;width:36px;position:fixed;bottom:10px;right:10px;box-shadow:0 0 10px rgba(0, 0, 0, 0.05);overflow:hidden;text-indent:100%;white-space:nowrap;background:url(https://img06.mifile.cn/v1/MI_542ED8B1722DC/5d38210e363c4581205eae5351682590.jpg) no-repeat center center;background-size:36px 36px;visibility:hidden;opacity:0;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;transition:all 0.3s;}
+.cd-top{display:inline-block;z-index:9999;height:36px;width:36px;position:fixed;bottom:10px;right:10px;box-shadow:0 0 10px rgba(0, 0, 0, 0.05);overflow:hidden;text-indent:100%;white-space:nowrap;background:url(https://img12.360buyimg.com/ddimg/jfs/t1/149307/21/34144/582/63ebee63F4bc388ed/606c7110e4be9012.png) no-repeat center center;background-size:36px 36px;visibility:hidden;opacity:0;-webkit-transition:all 0.3s;-moz-transition:all 0.3s;transition:all 0.3s;}
 :root{--swiper-theme-color:#007aff;}
 :root{--swiper-navigation-size:44px;}
 .contact_ico{position:fixed;right:10px;top:50%;height:120px;margin-top:-60px;width:60px;z-index:999;}
@@ -77,7 +77,7 @@ body{font-size:12px;}
   
   <div class="top-category-list">
 	<div class="p1-nav">
-      <h5 class="poplogo"><a  href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
+      <h5 class="poplogo"><a  href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg" alt="传说--跨界资源融合.引领行业公正"></a></h5>
     </div>
     <div class="p1-nav">
       <h5><a class="" href="/">首页</a></h5>
@@ -110,12 +110,12 @@ body{font-size:12px;}
 </div>
 <div class="pingtai">
 <header class="hui-header">
-		<a class="logo" href="/"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/6437a07897f4bbd821a0adcfc3a92994.jpg"></a>
+		<a class="logo" href="/"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/109151/10/24439/28178/63ebec3eFfda119e9/90551ccf32a94d41.jpg"></a>
 	    <a id="hui-search" href="javascript:dr_m_top_category();"><i class="fa fa-navicon"></i></a>
 </header><div class="pf_content">
   <ul class="list">
 		<li>
-		  <div class="photo"><a title="欧陆娱乐" href="javascript:;"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/a482dcf7125b191b9ba59ca7f03bc507.png" alt="欧陆娱乐"></a></div>
+		  <div class="photo"><a title="欧陆娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/59715/33/23943/9093/63ebece0F1cb235d0/c634b6d641212ba9.png" alt="欧陆娱乐"></a></div>
 		  <p>奖金：1980，赔率：9.9</p>
 		  		  <dl>
 		  	  <dd><a href="https://t.olu333.com/Register/aan51eCQNL" target="_blank">注册地址</a></dd>
@@ -125,7 +125,7 @@ body{font-size:12px;}
         </dl>
 	  </li>
 		  <li>
-		  <div class="photo"><a title="蓝狮在线" href="javascript:;"><img src="https://img03.mifile.cn/v1/MI_542ED8B1722DC/06960c1de42e0ee8137a5c4ce27f90b7.png" alt="蓝狮在线"></a></div>
+		  <div class="photo"><a title="蓝狮在线" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/182349/3/30220/10471/63ebeda9F537cbce5/27117a14f34730af.png" alt="蓝狮在线"></a></div>
 		  <p>奖金：1990，赔率：9.95</p>
 		  		  <dl>
 		  	  <dd><a href="https://t.lanshi666.com/Register/AkuTvrOlAC" target="_blank">注册地址</a></dd>
@@ -135,7 +135,7 @@ body{font-size:12px;}
         </dl>
 	  </li>
 	  		 <li>
-		  <div class="photo"><a title="富联娱乐" href="javascript:;"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/7e553638eccc6d251fcde485847ef05d.png" alt="富联娱乐"></a></div>
+		  <div class="photo"><a title="富联娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/102721/30/34928/11510/63ebed04F9ad848f0/8fbce1937ccdc232.png" alt="富联娱乐"></a></div>
 		  <p>奖金：1980，赔率：9.9</p>
 		  		  <dl>
 		  	  <dd><a href="https://t.flyl55.net/Register/m90aeTlqOP" target="_blank">注册地址</a></dd>
@@ -145,7 +145,7 @@ body{font-size:12px;}
         </dl>
 	  </li>
 	  	  <li>
-		  <div class="photo"><a title="顺盈娱乐" href="javascript:;"><img src="https://img07.mifile.cn/v1/MI_542ED8B1722DC/47b38d9920d5eac1e8d439fdd8b46d8f.png" alt="顺盈娱乐"></a></div>
+		  <div class="photo"><a title="顺盈娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/122944/14/30250/17358/63ebecc5Fa684bf91/2a1428f3596b5a8f.png" alt="顺盈娱乐"></a></div>
 		  <p>奖金：1990，赔率：9.95</p>
 		  		  <dl>
 		  	  <dd><a href="https://s.syss11.net/Register/2TOqYwWUXP" target="_blank">注册地址</a></dd>
@@ -155,7 +155,7 @@ body{font-size:12px;}
         </dl>
 	  </li>
 	  <li>
-		  <div class="photo"><a title="欧皇娱乐" href="javascript:;"><img src="https://img03.mifile.cn/v1/MI_542ED8B1722DC/3b70696932d3035a2c87ba82d77a66fd.png" alt="欧皇娱乐"></a></div>
+		  <div class="photo"><a title="欧皇娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/5608/25/18733/2874/63ebeda9F844280b8/6454e63e04b317de.png" alt="欧皇娱乐"></a></div>
 		  <p>奖金：1980，赔率：9.9</p>
 		  		  <dl>
 		  	  <dd><a href="https://uszsz.ohvip2.com/register.html" target="_blank">注册地址</a></dd>
@@ -165,7 +165,7 @@ body{font-size:12px;}
         </dl>
 	  </li>
 	   <li>
-		  <div class="photo"><a title="安信9娱乐" href="javascript:;"><img src="https://img08.mifile.cn/v1/MI_542ED8B1722DC/fbe13b20078ea00e2f715591a5421384.png" alt="安信9娱乐"></a></div>
+		  <div class="photo"><a title="安信9娱乐" href="javascript:;"><img src="https://img12.360buyimg.com/ddimg/jfs/t1/5313/6/18510/35374/63ebed7fF2a799377/61426722fd04e75c.png" alt="安信9娱乐"></a></div>
 		  <p>奖金：2000，赔率：10</p>
 		  		  <dl>
 		  	  <dd><a href="https://a9.ax923.com/link/reg/LZZ1sqtRQZ" target="_blank">注册地址</a></dd>
